responsive fixed, aligned the content in center in a better way

--- a/style.css
+++ b/style.css
@@ -21,13 +21,16 @@ article{
 
 body{
     width: 100%;
+    height: 100dvh;
     background-color: var(--background-color);
     font-family: "Barlow Semi Condensed", sans-serif;
     padding: 100px 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .grid{
-    margin: auto;
     display: grid;
     gap: 1rem;
     border-radius: 10px;
